[gd_scene load_steps=5 format=3 uid="uid://brjygsbomddjk"]

[ext_resource type="Script" path="res://src/core/level/level.gd" id="1_ybe1b"]
[ext_resource type="Script" path="res://src/core/level/control_parser.gd" id="2_dnff1"]
[ext_resource type="PackedScene" uid="uid://cwggn3r25h120" path="res://src/core/lazer/lazer.tscn" id="2_jtln5"]
[ext_resource type="Script" path="res://src/core/level/lazer_host.gd" id="2_u8vuf"]

[node name="Level2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ybe1b")
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="LazerHost" type="Node2D" parent="."]
script = ExtResource("2_u8vuf")
metadata/_edit_lock_ = true

[node name="Lazer" parent="LazerHost" instance=ExtResource("2_jtln5")]
position = Vector2(561, 279)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Viewport" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="ControlParser" type="Control" parent="CanvasLayer/Viewport"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("2_dnff1")
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="ControlPanel" type="Panel" parent="CanvasLayer/Viewport"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[connection signal="gui_input" from="CanvasLayer/Viewport/ControlParser" to="CanvasLayer/Viewport/ControlParser" method="_on_gui_input"]
[connection signal="mouse_moved" from="CanvasLayer/Viewport/ControlParser" to="LazerHost" method="_on_control_parser_mouse_moved"]
[connection signal="wheel_down_pressed" from="CanvasLayer/Viewport/ControlParser" to="LazerHost" method="_on_control_parser_wheel_down_pressed"]
[connection signal="wheel_up_pressed" from="CanvasLayer/Viewport/ControlParser" to="LazerHost" method="_on_control_parser_wheel_up_pressed"]
