extends Node2D
class_name LazerHost


func _on_control_parser_mouse_moved(position: Vector2, shift: bool, dragging: bool, press_position: Vector2) -> void:
	pass


func _on_control_parser_wheel_down_pressed(ctrl, alt, shift):
	pass # Replace with function body.


func _on_control_parser_wheel_up_pressed(ctrl, alt, shift):
	pass # Replace with function body.
